RESOLVED FIXED114633
[BlackBerry] Crash from null m_webSettings in WebPagePrivate
https://bugs.webkit.org/show_bug.cgi?id=114633
Summary [BlackBerry] Crash from null m_webSettings in WebPagePrivate
Liam Quinn
Reported 2013-04-15 13:24:14 PDT
We've had a few reports of crashes from a null m_webSettings in WebPagePrivate. As a speculative fix suggested by George Staikos, we should move the initialization of m_webSettings to the top of the init() method.
Attachments
Patch (2.05 KB, patch)
2013-04-15 13:33 PDT, Liam Quinn
no flags
Liam Quinn
Comment 1 2013-04-15 13:33:04 PDT
Rob Buis
Comment 2 2013-04-15 13:36:48 PDT
Comment on attachment 198177 [details] Patch Can't hurt.
WebKit Commit Bot
Comment 3 2013-04-15 14:05:43 PDT
Comment on attachment 198177 [details] Patch Clearing flags on attachment: 198177 Committed r148466: <http://trac.webkit.org/changeset/148466>
WebKit Commit Bot
Comment 4 2013-04-15 14:05:45 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.