[BlackBerry] Crash from null m_webSettings in WebPagePrivate https://bugs.webkit.org/show_bug.cgi?id=114633 RIM PR 303745

Patch by Liam Quinn <lquinn@blackberry.com> on 2013-04-15
Reviewed by Rob Buis.
Internally reviewed by Leo Yang.

Speculative fix suggested by George Staikos--initialize m_webSettings first thing in the init() method.

* Api/WebPage.cpp:
(BlackBerry::WebKit::WebPagePrivate::init):

Canonical link: https://commits.webkit.org/133020@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@148466 268f45cc-cd09-0410-ab3c-d52691b4dbfc